--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,88 @@
+[build-system]
+requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "change-logger"
-version = "0.2.0"
-description = ""
-authors = [
-    {name = "Sisung Kim",email = "sisung.kim1@gmail.com"}
-]
+dynamic = ["version"]
+description = "A sample Python package with semantic release"
 readme = "README.md"
-requires-python = ">=3.10"
+authors = [
+    {name = "Your Name", email = "your.email@example.com"}
+]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+]
+requires-python = ">=3.8"
 dependencies = [
+    # 여기에 프로젝트 의존성 추가
 ]
 
+[project.optional-dependencies]
+dev = [
+    "python-semantic-release>=9.0.0",
+    "pytest>=7.0.0",
+    "black>=22.0.0",
+    "isort>=5.0.0",
+    "flake8>=4.0.0",
+]
+
+[project.urls]
+Homepage = "https://github.com/yourusername/my-python-package"
+Repository = "https://github.com/yourusername/my-python-package"
+
+[tool.setuptools.packages.find]
+where = ["src"]
+
+[tool.setuptools.dynamic]
+version = {attr = "change_logger.__version__"}
+
+# ===== Python Semantic Release 설정 =====
+[tool.semantic_release]
+version_toml = ["pyproject.toml:project.version"]
+version_variables = [
+    "src/change_logger/__init__.py:__version__",
+]
+build_command = "pip install build && python -m build"
+
+# 커밋 컨벤션 설정
+[tool.semantic_release.commit_parser_options]
+allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
+minor_tags = ["feat"]
+patch_tags = ["fix", "perf"]
+
+# Changelog 설정
+[tool.semantic_release.changelog]
+template_dir = "templates"
+changelog_file = "CHANGELOG.md"
+exclude_commit_patterns = [
+    "^build:",
+    "^chore:",
+    "^ci:",
+    "^docs:",
+    "^style:",
+    "^test:",
+]
+
+# 브랜치 설정
+[tool.semantic_release.branches.main]
+match = "(main|master)"
+prerelease_token = "rc"
+prerelease = false
+
+# 원격 저장소 설정
+[tool.semantic_release.remote]
+name = "origin"
+token = { env = "GH_TOKEN" }
+
+# 배포 설정
+[tool.semantic_release.publish]
+dist_glob_patterns = ["dist/*"]
+upload_to_vcs_release = true
