--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,8 +60,9 @@ patch_tags = ["fix", "perf"]
 
 # Changelog 설정
 [tool.semantic_release.changelog]
-template_dir = "templates"
+# template_dir = "templates"
 changelog_file = "CHANGELOG.md"
+include_commit_body = true
 exclude_commit_patterns = [
     "^build:",
     "^chore:",
