--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,7 +55,7 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
-        token: ${{ secrets.GH_TOKEN }}
+        token: ${{ secrets.GITHUB_TOKEN  }}
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -71,7 +71,7 @@ jobs:
       id: release
       uses: python-semantic-release/python-semantic-release@master
       with:
-        github_token: ${{ secrets.GH_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN  }}
 
     - name: Publish package distributions to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
@@ -84,5 +84,5 @@ jobs:
       uses: python-semantic-release/upload-to-gh-release@main
       if: steps.release.outputs.released == 'true'
       with:
-        github_token: ${{ secrets.GH_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN  }}
   
