improved secret and toml syntax

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,7 @@ minor_tags = ["feat"]
 patch_tags = ["fix", "perf"]
 
 # Changelog 설정
-[tool.semantic_release.changelog]
+[tool.semantic_release.changelog.default_templates]
 # template_dir = "templates"
 changelog_file = "CHANGELOG.md"
 include_commit_body = true
