--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,8 +11,6 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write # 이 권한이 반드시 필요합니다!
     strategy:
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11"]
@@ -57,7 +55,7 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
-        token: ${{ secrets.GH_TOKEN }}
+        token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -73,7 +71,7 @@ jobs:
       id: release
       uses: python-semantic-release/python-semantic-release@master
       with:
-        github_token: ${{ secrets.GH_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
 
     # - name: Publish package distributions to PyPI
     #   uses: pypa/gh-action-pypi-publish@release/v1
@@ -86,5 +84,5 @@ jobs:
       uses: python-semantic-release/upload-to-gh-release@main
       if: steps.release.outputs.released == 'true'
       with:
-        github_token: ${{ secrets.GH_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
   
